# MathHunt

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/engine/: Game.cpp  Game.h  GameState.h  RenderWindow.h  renderwindow.cpp
src/entities/: Duck.h  Entity.h  Player.h  entity.cpp
src/managers/: GameManager.h  TextureManager.cpp  TextureManager.h
src/utils/: Math.h  math.cpp
